# fxtrace

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  configure.ac  fxtrace.1
src/: fxtrace.c  fxtrace.sh
tests/: T-01_usage.sh  T-02_longopts.sh  T-03_bugfix_relative_log.sh  T-04_relprefix.sh  T-05_nodirs.sh  T-06_access_flags.sh  T-06_verbose_mode.sh  run.sh  test.incl.sh
